--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,45 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% block meta %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
+    {% endblock %}
+
     <title>{% block title %}TastyHub{% endblock %}</title>
     
+    {% block corecss %}
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    
+    {% endblock %}
+
     <!-- Custom CSS -->
     {% block extra_css %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
 </head>
 <body>
+<header class="container-fluid fixed-top"></header>
+
+{% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <strong>Info:</strong> You have new messages!
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+{% endif %}
+
+{% block page_header %}
+   {% endblock %}
+
+{% block contain %}
+{% endblock %}
+
+{% block postloadjs %}
+{% endblock %}
+
+    <!-- Message Container -->
+<div class="message-container"></div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
