--- a/hub/templates/hub/index.html
+++ b/hub/templates/hub/index.html
@@ -4,10 +4,29 @@
 
 {% load i18n %}
 
-
-{% block title %}Feast{% endblock %}
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
+            </div>
+            </div>
+            </div>
+    
+{% endblock %}
 
 {% block content %}
-<h1 class="display-4 text-success">Welcome to Feast!</h1>
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+<h1 class="display-4 logo-font text-black">
+The new collection of the tasty foods are here.
+</h1>
+        </div>
+        <h4>
+            <a href="{% url 'hub:feast' %}" class="shop-now-button btn btn-success btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+        </h4>
+    </div>
+</div>
+
 {% endblock %}
 
