--- a/hub/templates/hub/index.html
+++ b/hub/templates/hub/index.html
@@ -23,7 +23,7 @@ The new collection of the tasty foods are here.
 </h1>
         </div>
         <h4>
-            <a href="{% url 'hub:feast' %}" class="shop-now-button btn btn-success btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+            <a href="" class="shop-now-button btn btn-success btn-lg rounded-0 text-uppercase py-3">Order Now</a>
         </h4>
     </div>
 </div>
