--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-{{ products }}
+{{ Dishes }}
         
        
         </div>
