--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,14 +2,14 @@ html {
     height: 100%;
 }
 
+
 body {
-    background: url('/media/food-menu.jpg') no-repeat center center fixed;
+    background: url('/static/images/food-menu.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
 }
-
 /* from Bulma */
 .icon {
     align-items: center;
