Add the image url and name for the json file

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,6 +15,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="product"></div>
 <div class="container">
     <div class="row">
         <div class="col">
