--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ html {
 
 
 body {
-    background: url('/media/food-menu.jpg') no-repeat center center fixed;
+    background: url('/static/images/food-menu.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
