Add the design for image container and add the cart and description

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,71 +1,61 @@
 {% extends "base.html" %}
-
 {% load static %}
-
 {% load i18n %}
 
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col">
-            </div>
-            </div>
-            </div>
-    
+        <div class="col"></div>
+    </div>
+</div>
 {% endblock %}
 
 {% block content %}
-<div class="product"></div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
-        <h2 class= "logo-font">{{ Dishes }}</h2>
-        <hr class="w-50 mb-1">
-
+            <h2 class="logo-font">{{ Dishes }}</h2>
+            <hr class="w-50 mb-4 mx-auto">
         </div>
     </div>
+    
     <div class="row">
-        <div class="product-container col-10 offset-1"></div>
-        <div class="row mt-1 mb-2"></div>
-        <div class="row">
-            {% for product in products %}
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <div class="card h-100 border-0">
-                    {%if product.image %}
-                    <a href="">
-                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                    </a>
-                    {%else%}
-                    <a href="">
-                        <img class="card-img-top img-fluid" src="{{ media_url}}noimage.png" alt="{{ product.name }}">
-                    </a>
-                    {%endif%}
-                    <div class="card-body pb-0">
-                        <p class="mb-0"> {{ product.name }}</p>
-                </div>
-                <div class="card-footer bg-white pt-0 border-0 text-left">
-                    <div class="row">
-                        <div class="col">
-                            <p class="lead mb-0 text-left font-weight-bold">£{{product.price}}</p>
-                            {%if product.rating %}
-                            <small class="text-muted"><i class="fas fa-star mr-1"></i> {{ product.rating }} / 5</small>
-                            {%else%}
-                            <small class="text-muted">No rating </small>
-                            {%endif%}
+        <div class="col-10 offset-1">
+            <div class="row">
+                {% for product in products %}
+                <div class="col-sm-6 col-md-4 col-lg-4 mb-4">
+                    <div class="card h-100 border-0 shadow-sm">
+                        {% if product.image %}
+                        <a href="{% url 'details' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 200px; object-fit: cover;">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'details' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}" style="height: 200px; object-fit: cover;">
+                        </a>
+                        {% endif %}
+                        
+                        <div class="card-body pb-0">
+                            <h5 class="card-title mb-2">{{ product.name }}</h5>
+                        </div>
+                        
+                        <div class="card-footer bg-white pt-0 border-0 text-left">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                                    {% if product.rating %}
+                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                    {% else %}
+                                    <small class="text-muted">No Rating</small>
+                                    {% endif %}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
+            </div>
         </div>
-        </div>
-        <div class="col-12 d-sm-none">
-            <hr>
-        </div>
-        <div class="col-12 d-none d-sm-block">
-            <hr>
-        </div>
-        {%endfor %}
-</div>
-</div>
+    </div>
 </div>
 {% endblock %}
-
