--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,7 +9,7 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item">All Menues</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Dishes</a>
             </div>
         </li>
         <li class="nav-item dropdown">
