--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,61 +1,120 @@
-{% extends "base.html" %}
-{% load static %}
-{% load i18n %}
-
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
-
-{% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="logo-font">{{ Dishes }}</h2>
-            <hr class="w-50 mb-4 mx-auto">
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-10 offset-1">
-            <div class="row">
-                {% for product in products %}
-                <div class="col-sm-6 col-md-4 col-lg-4 mb-4">
-                    <div class="card h-100 border-0 shadow-sm">
-                        {% if product.image %}
-                        <a href="{% url 'details' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 200px; object-fit: cover;">
-                        </a>
-                        {% else %}
-                        <a href="{% url 'details' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}" style="height: 200px; object-fit: cover;">
-                        </a>
-                        {% endif %}
-                        
-                        <div class="card-body pb-0">
-                            <h5 class="card-title mb-2">{{ product.name }}</h5>
-                        </div>
-                        
-                        <div class="card-footer bg-white pt-0 border-0 text-left">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                                    {% if product.rating %}
-                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                                    {% else %}
-                                    <small class="text-muted">No Rating</small>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
+<!-- Mobile Navigation Items (visible only on small screens) -->
+<ul class="navbar-nav d-flex d-lg-none flex-row ms-auto">
+    <!-- Mobile Search -->
+    <li class="nav-item dropdown me-3">
+        <a class="text-black nav-link" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div><i class="fas fa-search fa-lg"></i></div>
+                <p class="my-0 small">Search</p>
+            </div>
+        </a>
+        <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+            <form class="form" method="GET" action="{% url 'products' %}">
+                <div class="input-group w-100">
+                    <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                    <div class="input-group-append">
+                        <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
+                            <span class="icon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </button>
                     </div>
                 </div>
-                {% endfor %}
-            </div>
+            </form>
         </div>
-    </div>
+    </li>
+    
+    <!-- Mobile User Account -->
+    <li class="nav-item dropdown me-3">
+        <a class="text-black nav-link" href="#" id="mobile-user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div><i class="fas fa-user fa-lg"></i></div>
+                <p class="my-0 small">My Account</p>
+            </div>
+        </a>
+        <div class="dropdown-menu border-0" aria-labelledby="mobile-user-options">
+            {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                    <a href="" class="dropdown-item">Product Management</a>
+                {% endif %}
+                <a href="" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+            {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+            {% endif %}
+        </div>
+    </li>
+    
+    <!-- Mobile Shopping Bag -->
+    <li class="nav-item">
+        <a class="{% if grand_total %}text-info fw-bold{% else %}text-black{% endif %} nav-link" href="">
+            <div class="text-center">
+                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <p class="my-0 small">
+                    {% if grand_total %}
+                        ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                        $0.00
+                    {% endif %}
+                </p>
+            </div>
+        </a>
+    </li>
+</ul>
+
+<!-- Main Navigation Menu (collapsible) -->
+<div class="collapse navbar-collapse" id="main-nav">
+    <ul class="navbar-nav w-auto mx-auto">
+        <!-- All Food Items -->
+        <li class="nav-item dropdown">
+            <a class="logo-font fw-bold nav-link text-black me-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All Food Items
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+                <a href="" class="dropdown-item">By Price</a>
+                <a href="" class="dropdown-item">By Rating</a>
+                <a href="" class="dropdown-item">By Category</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Dishes</a>
+            </div>
+        </li>
+        
+        <!-- Dessert -->
+        <li class="nav-item dropdown">
+            <a class="logo-font fw-bold nav-link text-black me-5" href="#" id="dessert-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dessert
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="dessert-link">
+                <a href="" class="dropdown-item">Cakes</a>
+                <a href="" class="dropdown-item">Frozen desserts</a>
+                <a href="" class="dropdown-item">Fried desserts</a>
+                <a href="" class="dropdown-item">All desserts</a>
+            </div>
+        </li>
+        
+        <!-- Main Dish -->
+        <li class="nav-item dropdown">
+            <a class="logo-font fw-bold nav-link text-black me-5" href="#" id="main-dish-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Main Dish
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="main-dish-link">
+                <a href="" class="dropdown-item">Lamb</a>
+                <a href="" class="dropdown-item">Chicken</a>
+                <a href="" class="dropdown-item">Vegetarian</a>
+                <a href="" class="dropdown-item">All Items</a>
+            </div>
+        </li>
+        
+        <!-- Special Offers -->
+        <li class="nav-item dropdown">
+            <a class="logo-font fw-bold nav-link text-black" href="#" id="specials-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Special Offers
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
+                <a href="" class="dropdown-item">Platters for 2 people</a>
+                <a href="" class="dropdown-item">Platters for 4 people</a>
+                <a href="" class="dropdown-item">Platters for 6 people</a>
+            </div>
+        </li>
+    </ul>
 </div>
-{% endblock %}
