--- a/templates/base.html
+++ b/templates/base.html
@@ -76,14 +76,14 @@
                     </div>
                 </li>
                 <li class="list-inline-item">
-                    <a class="{% if grand_total %}text-info font-weight-blod{% else %}text-black{% endif %} nav-link" href="">
+                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                         <div class="text-center">
                             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                            <p class="my=0">
+                            <p class="my-0">
                                 {% if grand_total %}
                                 ${{ grand_total|floatformat:2 }}
                                 {% else %}
-                                $0.00
+                                £0.00
                                 {% endif %}
                             </p>
                         </div>
@@ -94,16 +94,17 @@
     </div>
      <div class="row bg-white">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggle-icon"></span>
+            <button class="navbar-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            {% include 'includes/mobile-top-header.html' %}
+        
             {% include 'includes/main-nav.html' %}
+            {% include 'includes/mobile-top-header.html' %}
         </nav>
     </div>
     <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
-            <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>
+            <h4 class="logo-font my-1">Free delivery on orders over £{{ free_shipping_threshold }}!</h4>
         </div>
     </div>
 </header>
