--- a/templates/base.html
+++ b/templates/base.html
@@ -98,8 +98,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
         
-            {% include 'includes/main-nav.html' %}
-            {% include 'includes/mobile-top-header.html' %}
+            {% include 'includes/header.html' %}
+            
         </nav>
     </div>
     <div id="delivery-banner" class="row text-center">
