--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -42,7 +42,7 @@
     </div>
 </li>
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
+    <a class="{% if grand_total %}text-primary fw-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
         <div class="text-center">
             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
             <p class="my-0">
@@ -60,7 +60,7 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font fw-bold nav-link text-black mr-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Food Items
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -71,18 +71,19 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font fw-bold nav-link text-black mr-5" href="#" id="clothing-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dessert
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'products' %}" class="dropdown-item">Cakes</a>
-                <a href="{% url 'products' %}" class="dropdown-item">Frozen desserts</a>
-                <a href="{% url 'products' %}" class="dropdown-item">Fried desserts</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All desserts</a>
+            
+                <a href="{% url 'products' %}?category=Cakes" class="dropdown-item">Cakes</a>
+                <a href="{% url 'products' %}?category=Frozen%20Desserts" class="dropdown-item">Frozen Desserts</a>
+                <a href="{% url 'products' %}?category=Fried%20Desserts" class="dropdown-item">Fried Desserts</a>
+                <a href="{% url 'products' %}?category=Cakes,Frozen%20Desserts,Fried%20Desserts" class="dropdown-item">All desserts</a>
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font fw-bold nav-link text-black mr-5" href="#" id="homeware-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Main Dish
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
@@ -93,7 +94,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font fw-bold nav-link text-black" href="#" id="specials-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
