--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,6 +20,17 @@
     </div>
     
     <div class="row">
+        <div class="col text-center">
+            <p class="text-muted mt-3">
+                {% if search_term != 'None_none' %}
+                <span class="small"><a href="{% url 'products' %}">Dishes</a> | </span>
+                {% endif %}
+                {{products|length}} Product{% if products|length != 1 %}s{% endif %} {% if search_term %} found for <strong>{{ search_term }}</strong>{% endif %}
+            </p>
+        </div>
+    </div>
+    
+    <div class="row">
         <div class="col-10 offset-1">
             <div class="row">
                 {% for product in products %}
@@ -58,4 +69,37 @@
         </div>
     </div>
 </div>
+
+<!-- Fixed Scroll to Top Button -->
+<div class="back-to-top-button shadow-lg rounded-circle">
+    <a href="#" class="scroll-up-link d-flex align-items-center justify-content-center h-100 w-100">
+        <i class="fas fa-chevron-up text-white"></i>
+    </a>
+</div>
+{% endblock %}
+
+{% block extra_js %}
+<!-- jQuery CDN -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+    // Show/hide scroll button based on scroll position
+    $(window).scroll(function() {
+        if ($(this).scrollTop() > 100) {
+            $('.back-to-top-button').fadeIn();
+        } else {
+            $('.back-to-top-button').fadeOut();
+        }
+    });
+    
+    // Smooth scroll to top when clicked
+    $('.scroll-up-link').click(function(e) {
+        e.preventDefault();
+        $('html, body').animate({
+            scrollTop: 0
+        }, 600);
+        return false;
+    });
+});
+</script>
 {% endblock %}
