--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <!--fontawsome kit-->
     <script src="https://kit.fontawesome.com/2f07f08452.js" crossorigin="anonymous"></script>
+    <!-- jQuery -->
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {% endblock %}
 
 </head>
