--- a/templates/base.html
+++ b/templates/base.html
@@ -69,10 +69,10 @@
                         <a href="" class="dropdown-item">Product Management</a>
                         {% endif %}
                         <a href="" class="dropdown-item">My profile</a>
-                        <a href="{% url 'account_logout'}" class="dropdown-item">Logout</a>
+                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                         {% else %}
-                        <a href="{% url 'account_signup'}" class="dropdown-item">Register</a>
-                        <a href="{% url 'account_login'}" class="dropdown-item">Login</a>
+                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                         {% endif %}
 
                     </div>
