--- a/products/templates/products/details.html
+++ b/products/templates/products/details.html
@@ -44,10 +44,26 @@
                     <h5>Description</h5>
                     <p class="mt-3">{{ product.description }}</p>
                 </div>
-                
-                <!-- Add to cart button or other actions -->
-                <div class="product-actions mt-4">
-                    <button class="btn btn-primary btn-lg">Add to Cart</button>
+
+                    <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item-id="{{ product.id }}" id="id_qyt_{{ product.id }}">
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5"><span class="icon">
+                                <i class="fas fa-arrow-left"></i>
+                            </span>
+                            <span class="text-uppercase">Continue Shopping </span> </a>
+                            <input type="submit" class="btn btn-black rounded-0 mt-5 text-uppercase" value="Add to Cart">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}"> 
+                    </form>
                 </div>
             </div>
         </div>
